[gd_scene load_steps=13 format=3 uid="uid://bcqr8cnm5ayxw"]

[ext_resource type="Script" uid="uid://ckpd8lha1w81o" path="res://Scripts/enemy_running.gd" id="1_fhuj1"]
[ext_resource type="Texture2D" uid="uid://dh20oo4eybyoc" path="res://Assets/Enemies/bear_polar.png" id="2_ddv50"]
[ext_resource type="AudioStream" uid="uid://b0svxxuv8vvuj" path="res://MusicAndSounds/SFX/walking_1.ogg" id="3_ddv50"]

[sub_resource type="Animation" id="Animation_44ejl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wd1gp"]
resource_name = "iddle"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_fhuj1"]
resource_name = "run"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ygpcg"]
_data = {
&"RESET": SubResource("Animation_44ejl"),
&"iddle": SubResource("Animation_wd1gp"),
&"run": SubResource("Animation_fhuj1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1v5m"]
size = Vector2(16, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtwya"]
size = Vector2(24, 17.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_v1v5m"]
radius = 172.743

[sub_resource type="CircleShape2D" id="CircleShape2D_dtwya"]
radius = 97.0824

[sub_resource type="CircleShape2D" id="CircleShape2D_wd1gp"]
radius = 39.0128

[node name="EnemyWhiteBear" type="CharacterBody2D"]
script = ExtResource("1_fhuj1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -8)
texture = ExtResource("2_ddv50")
flip_h = true
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ygpcg")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_v1v5m")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -0.25)
shape = SubResource("RectangleShape2D_dtwya")

[node name="FloorDetection" type="RayCast2D" parent="."]
position = Vector2(-13, -10)
target_position = Vector2(0, 27)
collision_mask = 4
collide_with_areas = true

[node name="WallDetection" type="RayCast2D" parent="."]
rotation = 1.5708
target_position = Vector2(6.11959e-07, 14)
collision_mask = 4
collide_with_areas = true

[node name="Moving" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ddv50")

[node name="LowVolumeSound" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowVolumeSound"]
shape = SubResource("CircleShape2D_v1v5m")

[node name="MediumVolumeSound" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MediumVolumeSound"]
shape = SubResource("CircleShape2D_dtwya")

[node name="FullVolumeSound" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullVolumeSound"]
shape = SubResource("CircleShape2D_wd1gp")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="LowVolumeSound" to="." method="_on_low_volume_sound_body_entered"]
[connection signal="body_exited" from="LowVolumeSound" to="." method="_on_low_volume_sound_body_exited"]
[connection signal="body_entered" from="MediumVolumeSound" to="." method="_on_medium_volume_sound_body_entered"]
[connection signal="body_exited" from="MediumVolumeSound" to="." method="_on_medium_volume_sound_body_exited"]
[connection signal="body_entered" from="FullVolumeSound" to="." method="_on_full_volume_sound_body_entered"]
[connection signal="body_exited" from="FullVolumeSound" to="." method="_on_full_volume_sound_body_exited"]
